manifests/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-prod
  namespace: prod-portfolio
  labels:
    app: prod-portfolio
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: prod-portfolio
  template:
    metadata:
      labels:
        app: prod-portfolio
    spec:
      containers:
        - name: portfolio
          image: registry.gitlab.bigd.no/homelab/k8s/k3sa/app-code/portfolio:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
      imagePullSecrets:
        - name: gitlab-registry-secret
