manifests/prod/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nordbye-ingress-prod
  namespace: prod-portfolio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nordbye.it`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: kube-system
      services:
        - name: nordbye-service-prod
          port: 80
    - match: Host(`www.nordbye.it`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: nordbye-service-prod
          port: 80
  tls:
    secretName: nordbye-it-tls
